backend-pod.yaml
apiVersion: apps/v1
kind: Pod

spec:
  template:
    metadata:
      labels:
        io.kompose.network/spring-boot-project: "true"
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: example
          image: spring-boot-project_backend:latest
          name: backend
          ports:
            - containerPort: 8080
          resources: {}
          imagePullPolicy: Never
      restartPolicy: Always
status: {}
