backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapp-test
  labels:
    io.kompose.service: backend
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: backend
