db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapp-test
  labels:
    io.kompose.service: db
  name: db
spec:
  type: ClusterIP
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
