network-policy-db-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    io.kompose.service: db-access
  name: db-access-policy
spec:
  podSelector:
    matchLabels:
      io.kompose.service: db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.service: backend
